extends PanelContainer


func _ready():
	_load_current_playbook()
	GameStore.level_changed.connect(_load_current_playbook)


func _load_current_playbook():
	var data = GameStore.get_current_medal_targets()
	%LabelGold.text = "ðŸ¥‡ %s points" % data.gold
	%LabelSilver.text = "ðŸ¥ˆ %s points" % data.silver
	%LabelBronze.text = "ðŸ¥‰ %s points" % data.bronze
